--- a/InsecurePayAndroid/app/src/main/res/layout/fragment_transfer.xml
+++ b/InsecurePayAndroid/app/src/main/res/layout/fragment_transfer.xml
@@ -43,7 +43,7 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="numberDecimal"
+            android:inputType="numberSigned|numberDecimal"
             android:ems="10"
             android:id="@+id/ettransferAmount" />
 
