--- a/InsecurePayAndroid/app/src/main/res/layout/content_transfer.xml
+++ b/InsecurePayAndroid/app/src/main/res/layout/content_transfer.xml
@@ -149,7 +149,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cancel"
+        android:text="@string/btnCancel"
         android:id="@+id/btnCancel"
         android:layout_marginTop="55dp"
         android:layout_below="@+id/relativeLayout"
@@ -158,7 +158,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=" Transfer "
+        android:text="@string/btnTransfer_Transfer"
         android:id="@+id/btnTransfer"
         android:layout_alignTop="@+id/btnCancel"
         android:layout_alignEnd="@+id/relativeLayout"
