--- a/InsecurePayAndroid/app/src/main/res/layout/fragment_transfer.xml
+++ b/InsecurePayAndroid/app/src/main/res/layout/fragment_transfer.xml
@@ -1,73 +1,61 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/TransferFunds"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.cigital.insecurepay.fragments.TransferFragment">
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
-    <!-- TODO: Update blank fragment layout -->
 
-
-    <LinearLayout
-        android:id="@+id/TransferFunds"
-        android:orientation="vertical"
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ProgressBar
-            android:id="@+id/Transfer_progress"
-            style="?android:attr/progressBarStyleLarge"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:visibility="gone" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/tvTransfer_custUsername"
-            android:id="@+id/tvTransfer_username" />
+        android:layout_height="wrap_content">
 
         <EditText
+            android:id="@+id/etCust_username"
             android:layout_width="371dp"
             android:layout_height="wrap_content"
-            android:id="@+id/etCust_username"
-            android:inputType="textAutoCorrect"
-            />
+            android:hint="@string/tvTransfer_custUsername"
+            android:inputType="textAutoCorrect" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/tvTransfer_Amount"
-            android:id="@+id/tvTransfer_amount" />
+    </android.support.design.widget.TextInputLayout>
+
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <EditText
+            android:id="@+id/ettransferAmount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="numberSigned|numberDecimal"
             android:ems="10"
-            android:id="@+id/ettransferAmount" />
+            android:hint="@string/tvTransfer_Amount"
+            android:inputType="numberSigned|numberDecimal" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/tvTransfer_Message"
-            android:id="@+id/tvTransfer_message" />
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
 
         <EditText
+            android:id="@+id/ettransferDetails"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/ettransferDetails"
-            android:inputType="textAutoCorrect"/>
+            android:hint="@string/tvTransfer_Message"
+            android:inputType="textAutoCorrect" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/btnTransfer_Transfer"
-            android:id="@+id/btn_transfer"
-            android:layout_gravity="center_horizontal" />
+    </android.support.design.widget.TextInputLayout>
 
-    </LinearLayout>
-</FrameLayout>
+    <Button
+        android:id="@+id/btn_transfer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/btnTransfer_Transfer" />
+
+</LinearLayout>
